# grok-agentic-search-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/grok_search_mcp/: __init__.py  server.py
