[project]
name = "grok-search-mcp"
version = "0.1.0"
description = "MCP server for Grok agentic search (web + X)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "xai-sdk>=1.3.1",
]

[project.scripts]
grok-search-mcp = "grok_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_search_mcp"]
